# ghost

./: .gitignore  .goreleaser.yaml  .mcp.json  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix  justfile  test_auto_scroll_manual.sh  test_restart_manual.sh
.github/workflows/: ci.yaml  release.yaml
.serena/: project.yml
.serena/memories/: ci_cd_workflows.md  code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
docs/: TODO.md  architecture.md  data.js  design.md  log_viewer_tests.md  one-shot-design.md  usage.md
e2e/: 001_run_command.sh  002_list_command.sh  005_kill_command.sh  007_multi_run_command.sh  run_all_tests.sh  test_cwd_functionality.sh  test_helpers.sh  test_list_command.sh  test_log_command.sh  test_run_command.sh  test_stop_status_commands.sh  test_zzz_cleanup_command.sh
examples/: spawn_script.rs  zombie_demo.rs
scripts/: hello_loop.sh  multiline_test.sh
src/: lib.rs  main.rs
src/app/: commands.rs  config.rs  display.rs  error.rs  helpers.rs  logging.rs  mod.rs  port_detector.rs  process.rs  process_state.rs  storage.rs
src/app/helpers/: command_parser.rs  file_watcher.rs  mod.rs  port_utils.rs  process_utils.rs  task_validation.rs  time.rs
src/app/storage/: cleanup.rs  database.rs  error.rs  task.rs  task_repository.rs  task_status.rs
src/app/tui/: app.rs  log_viewer.rs  log_viewer_scrollview.rs  mod.rs  process_details.rs  table_state_scroll.rs  task_list.rs
src/core/: command.rs  mod.rs  storage.rs
src/mcp/: mod.rs
tests/: command_wrap_tests.rs  log_auto_scroll_tests.rs  mcp_server_tests.rs  port_detector_test.rs  restart_tests.rs  tcp_server_helper.rs  tui_tests.rs
tests/expected/: log_viewer_display.txt  log_viewer_many_lines.txt  process_details_display.txt  process_details_many_env_vars.txt  process_details_with_listening_ports.txt  task_list_empty.txt  task_list_selected.txt  task_list_with_tasks.txt
