[package]
name = "ghost"
version = "0.0.1"
authors = ["skanehira"]
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
uuid = { version = "1.11", features = ["v4"] }
thiserror = "2.0"
dirs = "6.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.46", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
notify = "8.1"
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }
tui-scrollview = "0.5.1"
nix = { version = "0.30", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
regex = "1.11"
